a second fix of horizontal scroll
by changing from 'left' which push the box out of the screen to 'padding-left' that push only the content inside the box

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ p {
   justify-content: center;
   position: absolute;
   width: 100%;
-  left: 20px;
+  padding-left: 20px;
   margin-top: 20px;
 }
 
